ID-4499: Java security-provider for luna added